# tokio-chat-server-demo

./: .gitignore  Cargo.toml  Makefile
chat-client/: Cargo.toml
chat-client/src/: main.rs
chat-common/: Cargo.toml
chat-common/src/: lib.rs
chat-server/: Cargo.toml
chat-server/src/: client.rs  main.rs  server.rs
