[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio = { version = "1.24", features = ["full"] }
chat-common = { path = "../chat-common" }
pretty_env_logger = "0.4.0"
futures = "0.3.12"
bincode = "1.3.3"
log = "0.4.17"